# examples

./: README.md  requirements.txt  streamlit_app.py  test_outage_agent_local.py  test_remote_outage_agent.py
deep-research-pack/: README.md  pyproject.toml
deep-research-pack-sonnet/: README.md  pyproject.toml
deep-research-pack-sonnet/research_pack/: __init__.py  app.py  cli.py  llm.py  models.py  workflow.py
deep-research-pack-sonnet/research_pack/crawl/: __init__.py  crawler.py  extract.py  fetcher.py  robots.py
deep-research-pack-sonnet/research_pack/dedupe/: __init__.py  similarity.py
deep-research-pack-sonnet/research_pack/render/: __init__.py  report.py
deep-research-pack-sonnet/research_pack/utils/: fs.py  ids.py  logging.py
deep-research-pack-sonnet/tests/: test_dedupe.py  test_extract.py  test_ids.py  test_models.py  test_render.py  test_workflow_offline.py
deep-research-pack/research_pack/: __init__.py  app.py  cli.py  models.py  workflow.py
deep-research-pack/research_pack/crawl/: crawler.py  extractor.py  robots.py
deep-research-pack/research_pack/dedupe/: similarity.py
deep-research-pack/research_pack/enrich/: enricher.py
deep-research-pack/research_pack/render/: report.py
deep-research-pack/research_pack/utils/: logging.py  text.py
deep-research-pack/tests/: test_dedupe.py  test_extractor.py  test_models.py  test_text.py
graph-rag-pipeline/: .gitignore  README.md  app.py  blog.md  config.py  models.py  neo4j_ops.py  requirements.txt  test_local.py
graph-rag-pipeline/samples/: climate_change.txt
graphrag-with-tensorlake/: README.md  tensorlake_graphrag.py
outage-agent/: .gitignore  README.md  outage_agent.py  test_local_setup.md
podcast-agent/: .env.example  README.md  app.py  podcast_agent.py  requirements.txt
vuln-scanner/: README.md  vuln_scanner.py
